feat(BannerView): Develop the custom attributes of indicatorMargin

--- a/common/src/main/res/values/attrs.xml
+++ b/common/src/main/res/values/attrs.xml
@@ -10,5 +10,9 @@
             <flag name="right" value="5" />
             <flag name="center_horizontal" value="1" />
         </attr>
+        <attr name="indicator_margin_top" format="dimension" />
+        <attr name="indicator_margin_bottom" format="dimension" />
+        <attr name="indicator_margin_left" format="dimension" />
+        <attr name="indicator_margin_right" format="dimension" />
     </declare-styleable>
 </resources>
