feat(BannerView):  Develop the custom attributes of indicatorSpacing

--- a/common/src/main/res/values/attrs.xml
+++ b/common/src/main/res/values/attrs.xml
@@ -14,5 +14,6 @@
         <attr name="indicator_margin_bottom" format="dimension" />
         <attr name="indicator_margin_left" format="dimension" />
         <attr name="indicator_margin_right" format="dimension" />
+        <attr name="indicator_spacing" format="dimension" />
     </declare-styleable>
 </resources>
