--- a/common/src/main/res/values/attrs.xml
+++ b/common/src/main/res/values/attrs.xml
@@ -15,5 +15,6 @@
         <attr name="indicator_margin_left" format="dimension" />
         <attr name="indicator_margin_right" format="dimension" />
         <attr name="indicator_spacing" format="dimension" />
+        <attr name="show_indicator" format="boolean" />
     </declare-styleable>
 </resources>
