--- a/common/src/main/res/values/attrs.xml
+++ b/common/src/main/res/values/attrs.xml
@@ -16,5 +16,6 @@
         <attr name="indicator_margin_right" format="dimension" />
         <attr name="indicator_spacing" format="dimension" />
         <attr name="show_indicator" format="boolean" />
+        <attr name="auto_scroll_time_spacing" format="integer" />
     </declare-styleable>
 </resources>
