fix(music): optimize layout

--- a/musiclibrary/src/main/res/values/color.xml
+++ b/musiclibrary/src/main/res/values/color.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="orange">#F17C2C</color>
+    <color name="wathet">#A2D1F1</color>
 </resources>
