--- a/musiclibrary/src/main/res/layout/coordinatorlayout_activity_daily_recommend.xml
+++ b/musiclibrary/src/main/res/layout/coordinatorlayout_activity_daily_recommend.xml
@@ -20,13 +20,14 @@
                 android:layout_height="match_parent"
                 android:id="@+id/music_daily_recommend_iv"
                 android:scaleType="centerCrop"
-                android:src="@drawable/white_holder"
+                android:src="@color/wathet"
                 app:layout_collapseMode="parallax"/>
 
             <androidx.appcompat.widget.Toolbar
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 app:layout_collapseMode="pin"
+                app:navigationIcon="@drawable/back_white_24"
                 android:id="@+id/music_daily_recommend_tool_bar"/>
 
         </com.google.android.material.appbar.CollapsingToolbarLayout>
@@ -35,16 +36,18 @@
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/music_daily_recommend_play_all_layout"
+                android:layout_marginVertical="8dp"
                 android:orientation="horizontal">
 
 
