--- a/home/src/main/res/layout/home_activity_home.xml
+++ b/home/src/main/res/layout/home_activity_home.xml
@@ -1,25 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".HomeActivity">
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <FrameLayout
-        android:id="@+id/home_fl_fragment_layout"
+    <data>
+        <import type="com.topview.purejoy.home.HomeActivity"/>
+        <variable
+            name="homeActivity"
+            type="HomeActivity" />
+    </data>
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1" />
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        tools:context=".HomeActivity">
 
-    <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/home_bnv_bottom_navigation"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:itemIconTint="@drawable/home_bg_bottom_navi_item"
-        app:itemRippleColor="?attr/colorSurface"
-        app:itemTextColor="@drawable/home_bg_bottom_navi_item"
-        app:menu="@menu/home_bottom_navi" />
+        <FrameLayout
+            android:id="@+id/home_fl_fragment_layout"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1" />
 
-</LinearLayout>
+        <com.google.android.material.bottomnavigation.BottomNavigationView
+            android:id="@+id/home_bnv_bottom_navigation"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:itemIconTint="@drawable/home_bg_bottom_navi_item"
+            app:itemRippleColor="?attr/colorSurface"
+            app:itemTextColor="@drawable/home_bg_bottom_navi_item"
+            app:menu="@menu/home_bottom_navi" 
+            app:OnNavigationItemSelectedListener="@{homeActivity::onNavigationItemSelected}"
+            app:OnNavigationItemReselectedListener="@{homeActivity::onNavigationItemReselected}"/>
+
+    </LinearLayout>
+</layout>
