--- a/home/src/main/res/layout/item_home_recommend_new_song.xml
+++ b/home/src/main/res/layout/item_home_recommend_new_song.xml
@@ -17,7 +17,8 @@
         <ImageView
             android:layout_width="50dp"
             android:layout_height="50dp"
-            app:loadImg="@{recommendNewSong.picUrl}"/>
+            android:scaleType="centerCrop"
+            app:loadImg="@{recommendNewSong.picUrl}" />
         
         <LinearLayout
             android:layout_width="match_parent"
@@ -25,13 +26,15 @@
             android:orientation="vertical">
             
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:singleLine="true"
                 android:text="@{recommendNewSong.name}"/>
             
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:singleLine="true"
                 android:text="@{recommendNewSong.artistName}"/>
             
         </LinearLayout>
