--- a/home/src/main/res/layout/item_home_recommend_new_song.xml
+++ b/home/src/main/res/layout/item_home_recommend_new_song.xml
@@ -12,7 +12,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:foreground="?android:attr/selectableItemBackground">
 
         <ImageView
             android:layout_width="50dp"
