--- a/home/src/main/res/layout/fragment_home_discover.xml
+++ b/home/src/main/res/layout/fragment_home_discover.xml
@@ -10,6 +10,7 @@
         <import type="com.topview.purejoy.home.discover.adapter.DailyRecommendPlayListAdapter"/>
         <import type="com.topview.purejoy.home.discover.adapter.RecommendNewSongAdapter"/>
         <import type="com.topview.purejoy.home.discover.RecommendNewSongDecoration"/>
+        <import type="androidx.recyclerview.widget.SnapHelper"/>
         <variable
             name="viewModel"
             type="HomeDiscoverViewModel" />
@@ -28,6 +29,12 @@
         <variable
             name="recommendNewSongDecoration"
             type="RecommendNewSongDecoration" />
+        <variable
+            name="dailyRecommendPlayListSnapHelper"
+            type="SnapHelper" />
+        <variable
+            name="recommendNewSongSnapHelper"
+            type="SnapHelper" />
     </data>
 
     <LinearLayout
@@ -46,7 +53,8 @@
             android:layout_height="wrap_content"
             app:layoutManager="@{dailyRecommendNewSongLayoutManager}"
             app:dailyRecommendPlayListAdapter="@{dailyRecommendPlayListAdapter}"
-            app:dailyRecommendPlayList="@{viewModel.dailyRecommendPlayListLiveData}"/>
+            app:dailyRecommendPlayList="@{viewModel.dailyRecommendPlayListLiveData}"
+            app:attachSnapHelper="@{dailyRecommendPlayListSnapHelper}"/>
         
         <androidx.recyclerview.widget.RecyclerView
             android:layout_width="match_parent"
@@ -54,7 +62,8 @@
             app:layoutManager="@{recommendNewSongLayoutManager}"
             app:recommendNewSongAdapter="@{recommendNewSongAdapter}"
             app:recommendNewSong="@{viewModel.recommendNewSongLiveData}"
-            app:recommendNewSongDecoration="@{recommendNewSongDecoration}"/>
+            app:recommendNewSongDecoration="@{recommendNewSongDecoration}"
+            app:attachSnapHelper="@{recommendNewSongSnapHelper}"/>
         
     </LinearLayout>
 </layout>
