--- a/home/src/main/res/layout/fragment_home_discover.xml
+++ b/home/src/main/res/layout/fragment_home_discover.xml
@@ -41,8 +41,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:layout_marginStart="@dimen/home_discover_margin_left"
-        android:layout_marginEnd="@dimen/home_discover_margin_right"
+        android:paddingStart="@dimen/home_discover_padding_left"
+        android:paddingEnd="@dimen/home_discover_padding_right"
         tools:context=".discover.HomeDiscoverFragment">
 
         <LinearLayout
