--- a/home/src/main/res/values/dimens.xml
+++ b/home/src/main/res/values/dimens.xml
@@ -5,4 +5,5 @@
     <dimen name="home_discover_padding_right">15dp</dimen>
     <dimen name="home_search_ic_width">15dp</dimen>
     <dimen name="home_search_ic_height">15dp</dimen>
+    <dimen name="home_discover_single_row_icon_size">35dp</dimen>
 </resources>
