--- a/home/src/main/res/layout/item_home_daily_recommend_playlist.xml
+++ b/home/src/main/res/layout/item_home_daily_recommend_playlist.xml
@@ -10,18 +10,20 @@
     </data>
     
     <LinearLayout
-        android:layout_width="90dp"
+        android:layout_width="@dimen/home_discover_daily_recommend_playlist_img_size"
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
         <ImageView
-            android:layout_width="90dp"
-            android:layout_height="90dp" 
+            android:layout_width="@dimen/home_discover_daily_recommend_playlist_img_size"
+            android:layout_height="@dimen/home_discover_daily_recommend_playlist_img_size" 
             app:loadImg="@{dailyRecommendPlayList.picUrl}"/>
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content" 
+            android:lines="2"
+            android:ellipsize="end"
             android:text="@{dailyRecommendPlayList.name}" />
     </LinearLayout>
 
